# team_async_api

./: .env.example  .gitignore  README.md  docker-compose-tests.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: code-checker.yaml
data/: README.md
data/docs/: tz.md  tz_analiz.md  tz_questions.md
data/elasticsearch/: Dockerfile  Makefile  README.md  create_indices.sh
data/elasticsearch/indexes/: films.json  genres.json  people.json
data/fake_data_generator/: Makefile  README.md  pyproject.toml
data/fake_data_generator/fake_gen/: __main__.py  arguments.py  counter.py  settings.py  version.py  worker.py
data/fake_data_generator/fake_gen/factories/: cover.py  definition.py  definition_film.py  film.py  genre.py  genre_film.py  mixins.py  person.py  person_film.py  related_to_film.py
data/fake_data_generator/fake_gen/loaders/: definition.py  definition_film.py  films.py  genres.py  load_unrelated.py  people.py  person_film.py
data/fake_data_generator/fake_gen/models/: film.py  genre.py  person.py  person_film.py  related_to_film.py
data/fake_data_generator/fake_gen/providers/: film_id.py  genre.py  random_id.py  roles.py
data/fake_full_data_generator/: .editorconfig  .env.example  README.md
data/fake_full_data_generator/fake_gen/: __main__.py  settings.py  version.py
data/fake_full_data_generator/fake_gen/factories/: cover.py  film.py  related_to_film.py
data/fake_full_data_generator/fake_gen/loaders/: cover.py  definition.py  films.py  genre_film.py
data/fake_full_data_generator/fake_gen/models/: accessibility.py  cover.py  definition.py  definition_film.py  genre_film.py  mpaa_rating.py  related_to_film.py  roles.py
data/fake_full_data_generator/fake_gen/providers/: accessibility.py  definitions.py  mpaa_rating.py  random_id.py
data/postgres/: .env.example  Dockerfile  Makefile  README.md  create_tables.sql  destroy_tables.sql
data/postgres_full/: Makefile  README.md  create_tables.sql  destroy_tables.sql
etl/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  ruff.toml  setup.cfg
etl/postgres_to_es/: .dockerignore  Dockerfile  env.example  es_schema.sh  main.py  requirements.txt
etl/postgres_to_es/clients/: contexts.py
etl/postgres_to_es/configs/: config.py  logger.py
etl/postgres_to_es/exraxtors/: extract.py  sql_query.py
etl/postgres_to_es/loaders/: loader.py
etl/postgres_to_es/states/: storage.py
etl/postgres_to_es/transforms/: transform.py
etl/postgres_to_es/transforms/models/: genres.py  movies.py  persons.py
etl/schema_design/: movies_database.sql
etl/sqlite_to_postgres/: .dockerignore  Dockerfile  Makefile  contexts.py  dto.py  dto_factory.py  env.example  load_data.py  postgres_saver.py  requirements.txt  sqlite_extractor.py
etl/sqlite_to_postgres/tests/check_consistency/: conftest.py  test_consistency.py
nginx/: Dockerfile  nginx.conf
nginx/configs/: site.conf
src/: Dockerfile  main.py  pyproject.toml
src/api/v1/: adapters.py  dependencies.py  films.py  genres.py  persons.py  response_models.py
src/core/: config.py  logger.py
src/db/: elastic.py  redis.py
src/fake_data/: fake_data.py
src/fake_data/models/: film.py
src/fake_data/services_contracts/: film_service.py  genre_service.py  person_service.py
src/models/: film.py  genre.py  person.py
src/services/: cache.py  db.py  exceptions.py  film.py  genre.py  person.py
tests/: Dockerfile  pyproject.toml  requirements.txt
tests/functional/: Dockerfile  conftest.py  pyproject.toml  settings.py  wait_for_es.py  wait_for_redis.py
tests/functional/src/: test_empty_test.py  test_films.py  test_genres.py  test_persons.py
tests/functional/src/fixtures/: aiohttp.py  cache.py  es.py  films.py  genres.py  persons.py
tests/functional/testdata/: es_mapping.py  fake_films.py  fake_genres.py  fake_persons.py
tests/functional/utils/: es_index.py  wait_for_es.py  wait_for_redis.py
