[tool.poetry]
name = "team-async-api-sprint-1"
version = "0.1.0"
description = ""
authors = ["vladmeh <vladmeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
elasticsearch = {extras = ["async"], version = "^8.12.0"}
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
orjson = "^3.9.12"
uvloop = {platform = "linux", markers = "sys_platform != 'win32' or platform_python_implementation == 'CPython'", version = "^0.19.0"}
backoff = "^2.2.1"
click = "^8.1.7"
ruff = "^0.1.14"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
