[tool.poetry]
name = "async-api-functional-tests"
version = "0.1.0"
description = "Functional tests for async API"
authors = ["Andrey Nikitsich <andrey.nikitsich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "6.2.5"
pytest-asyncio = "0.12.0"
aiohttp = "3.7.2"
elasticsearch = {version = "^8.12.0", extras = ["async"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
